removed ol in favor of divs. stopped using a span for character and instead grouped similarly covered strings.

--- a/private/main.css
+++ b/private/main.css
@@ -51,3 +51,12 @@ div.report-container {
   margin-bottom: 1em;
   padding-right: 2em;
 }
+
+div.line-numbers {
+  display: inline-block;
+  margin-right: 1em;
+}
+
+div.file-lines {
+  display: inline-block;
+}
